--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "macage",
   "description": "Find out when your Mac first booted up. The start of serious Macage.",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "homepage": "https://github.com/mustafar/macage",
   "author": {
     "name": "Mustafa Rizvi",
@@ -35,5 +35,14 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt": "~0.4.2"
   },
-  "keywords": []
+  "keywords": [
+    "age",
+    "old",
+    "start",
+    "mac",
+    "first",
+    "computer age",
+    "macbook",
+    "macbook age"
+  ]
 }
